# ParhuzamosAlgoritmusok

./: README.md
1_gyak/: feladatok_egyben.c
Beadando_C#/LagrangeInterpolacio/: LagrangeInterpolacio.sln  README.md
Beadando_C#/LagrangeInterpolacio/LagrangeInterpolacio/: Program.cs
Beadando_C#/LagrangeInterpolacio/LagrangeInterpolacio_seq/: LagrangeInterpolacio_seq.sln
Beadando_C#/LagrangeInterpolacio/LagrangeInterpolacio_seq/LagrangeInterpolacio_seq/: Program.cs
Beadando_C#/Lagrange_Interpolacio/: Lagrange_Interpolacio.sln
Beadando_C#/Lagrange_Interpolacio/Lagrange_Interpolacio/: Program.cs
Beadando_OPENMP/: CMakeLists.txt  READ  primek_openmp.c  primek_seq.c
Beadando_POSIX/: MergeSort_seq.c  OsszefesuloRendezes_posix.c  README.md
gyak3/: gyak3_1.c  gyak3_2.c  gyak3_3.c
